fix: add pointer to buttons on hover and decrease gap of register

--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -108,6 +108,7 @@
 
 .button:hover {
     background-color: var(--accent-color);
+    cursor: pointer;
 }
 
 .close {
